<resources>
    <string name="app_name">SimpleCypher</string>
    <string name="welcomeScreenText">SIMPLE CYPHER</string>
    <string name="welcomeScreenButtonText">GET STARTED</string>
    <string name="StartCypherButtonText">ENCODE</string>
    <string name="mainCypherInfo">Enter the desired message in the first text box and the number for rotation in the second text box</string>
    <string name="IncRotNumButton">+</string>
    <string name="DecRotNumButton">-</string>
    <string name="RotNumView">1</string>
    <string name="cypheredMsgDefault">Cyphered message appears here</string>
    <string name="messageToCypherHint">Enter your message here</string>
    <string name="CaesarCipher">Caesar Cipher</string>
    <string name="MonoalphabeticCipher">Monoalphabetic Cipher</string>
    <string name="HomophonicSubstitutionCipher">Homophonic Substitution Cipher</string>
    <string name="PolygramSubstitutionCipher">Polygram Substitution Cipher</string>
    <string name="PlayfairCipher">Playfair Cipher</string>
    <string name="CaesarCipherExplanation">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in consequat sem, id iaculis est. Quisque malesuada faucibus iaculis. Morbi rutrum egestas neque placerat egestas. Morbi ornare ex non nunc mattis, a elementum urna iaculis. Phasellus fermentum mattis sodales. Donec ac urna eu nulla lacinia consequat. Etiam vel ipsum libero. Etiam facilisis neque eget tellus ornare, vitae faucibus nisl dictum. In ex sapien, auctor at fringilla quis, condimentum eget felis. Aliquam at tincidunt velit. Nunc quis fringilla tellus, eu suscipit dui. Maecenas maximus porta tellus, eu sollicitudin dui feugiat eget. Nullam suscipit lacus odio, vel convallis ante vestibulum lobortis.  Vivamus justo elit, viverra sit amet dignissim consequat, congue in eros. Nullam sit amet felis ut libero egestas interdum et vehicula diam. Mauris nec suscipit turpis, ac venenatis libero. In maximus porttitor mattis. Morbi rutrum mollis mi ac porttitor. Sed molestie fermentum quam in blandit. Cras venenatis malesuada quam vel malesuada. Etiam vehicula nulla nunc, id placerat erat consectetur condimentum. Nullam a malesuada justo, a scelerisque nulla.  Cras quis risus vitae elit pharetra porta ac sed erat. Quisque gravida velit neque, eget ultrices leo blandit vel. Phasellus aliquet id nisi et semper. Donec a luctus lorem. Suspendisse et laoreet orci, vitae pulvinar augue. Vestibulum nibh justo, pellentesque et felis malesuada, tempor molestie ligula. Proin vestibulum enim sed nisl dignissim, quis porttitor justo imperdiet. Donec libero tortor, facilisis et efficitur in, imperdiet id nibh. Sed sed rhoncus urna. Morbi fermentum vestibulum tortor ac accumsan. Aliquam odio urna, porta pretium elit bibendum, ornare sodales magna. Praesent sed quam eget augue elementum sagittis id ut mi. Vivamus id rutrum diam. Proin eu nibh magna. Suspendisse et massa vel nunc fermentum vehicula ac sed nisi.  Curabitur feugiat tellus et ante lobortis, sit amet dapibus urna pulvinar. Aliquam ac erat mattis, vulputate lacus eu, viverra velit. Suspendisse potenti. Aliquam sed dictum velit. Proin posuere ex non lacinia porta. Cras rutrum est vel massa consectetur aliquam. Nam consectetur felis nec venenatis pulvinar. Etiam consectetur sapien sagittis est tempor, a consequat purus egestas. Quisque tristique elementum erat. Nulla interdum iaculis rhoncus. Donec aliquam, velit nec volutpat varius, nunc magna hendrerit neque, id cursus eros arcu a erat.  Vestibulum volutpat nisi at risus aliquet, eu auctor diam laoreet. Sed ullamcorper eget turpis et consequat. Etiam nulla dolor, tincidunt sit amet nisi in, euismod pharetra augue. Integer ut diam consectetur, faucibus lectus sed, finibus magna. Curabitur aliquam posuere lacus, et efficitur ex ultrices ut. Ut interdum lacus ex, et suscipit augue auctor in. Sed ac luctus diam, in mattis nibh. Suspendisse vitae urna sed odio tincidunt volutpat. Nullam facilisis, leo suscipit sodales semper, mauris ipsum commodo justo, vitae mollis magna nisi in nisl. Quisque semper orci et risus lobortis dictum. Nullam efficitur purus a justo euismod, nec dictum nunc interdum. Mauris id posuere risus, eget sollicitudin mi.</string>
    <string name="LOREMIPSUM">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in consequat sem, id iaculis est. Quisque malesuada faucibus iaculis. Morbi rutrum egestas neque placerat egestas. Morbi ornare ex non nunc mattis, a elementum urna iaculis. Phasellus fermentum mattis sodales. Donec ac urna eu nulla lacinia consequat. Etiam vel ipsum libero. Etiam facilisis neque eget tellus ornare, vitae faucibus nisl dictum. In ex sapien, auctor at fringilla quis, condimentum eget felis. Aliquam at tincidunt velit. Nunc quis fringilla tellus, eu suscipit dui. Maecenas maximus porta tellus, eu sollicitudin dui feugiat eget. Nullam suscipit lacus odio, vel convallis ante vestibulum lobortis.  Vivamus justo elit, viverra sit amet dignissim consequat, congue in eros. Nullam sit amet felis ut libero egestas interdum et vehicula diam. Mauris nec suscipit turpis, ac venenatis libero. In maximus porttitor mattis. Morbi rutrum mollis mi ac porttitor. Sed molestie fermentum quam in blandit. Cras venenatis malesuada quam vel malesuada. Etiam vehicula nulla nunc, id placerat erat consectetur condimentum. Nullam a malesuada justo, a scelerisque nulla.  Cras quis risus vitae elit pharetra porta ac sed erat. Quisque gravida velit neque, eget ultrices leo blandit vel. Phasellus aliquet id nisi et semper. Donec a luctus lorem. Suspendisse et laoreet orci, vitae pulvinar augue. Vestibulum nibh justo, pellentesque et felis malesuada, tempor molestie ligula. Proin vestibulum enim sed nisl dignissim, quis porttitor justo imperdiet. Donec libero tortor, facilisis et efficitur in, imperdiet id nibh. Sed sed rhoncus urna. Morbi fermentum vestibulum tortor ac accumsan. Aliquam odio urna, porta pretium elit bibendum, ornare sodales magna. Praesent sed quam eget augue elementum sagittis id ut mi. Vivamus id rutrum diam. Proin eu nibh magna. Suspendisse et massa vel nunc fermentum vehicula ac sed nisi.  Curabitur feugiat tellus et ante lobortis, sit amet dapibus urna pulvinar. Aliquam ac erat mattis, vulputate lacus eu, viverra velit. Suspendisse potenti. Aliquam sed dictum velit. Proin posuere ex non lacinia porta. Cras rutrum est vel massa consectetur aliquam. Nam consectetur felis nec venenatis pulvinar. Etiam consectetur sapien sagittis est tempor, a consequat purus egestas. Quisque tristique elementum erat. Nulla interdum iaculis rhoncus. Donec aliquam, velit nec volutpat varius, nunc magna hendrerit neque, id cursus eros arcu a erat.  Vestibulum volutpat nisi at risus aliquet, eu auctor diam laoreet. Sed ullamcorper eget turpis et consequat. Etiam nulla dolor, tincidunt sit amet nisi in, euismod pharetra augue. Integer ut diam consectetur, faucibus lectus sed, finibus magna. Curabitur aliquam posuere lacus, et efficitur ex ultrices ut. Ut interdum lacus ex, et suscipit augue auctor in. Sed ac luctus diam, in mattis nibh. Suspendisse vitae urna sed odio tincidunt volutpat. Nullam facilisis, leo suscipit sodales semper, mauris ipsum commodo justo, vitae mollis magna nisi in nisl. Quisque semper orci et risus lobortis dictum. Nullam efficitur purus a justo euismod, nec dictum nunc interdum. Mauris id posuere risus, eget sollicitudin mi.</string>
    <string name="HillCipher">Hill Cipher</string>
</resources>