<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    tools:context=".CipherActivities.CaesarCipher.CaesarCipherActivity">

    <TextView
        android:id="@+id/CypheredMessage"
        android:layout_width="356dp"
        android:layout_height="127dp"
        android:background="#00BCD4"
        android:text="@string/cypheredMsgDefault"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CypherMainButton" />

    <Button
        android:id="@+id/CypherMainButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="326dp"
        android:layout_height="50dp"
        android:background="#FFC107"
        android:backgroundTint="#FFEB3B"
        android:onClick="cypher"
        android:text="@string/StartCypherButtonText"
        android:textColorLink="#E91E63"
        app:layout_constraintBottom_toTopOf="@+id/CypheredMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageToCypher" />

    <EditText
        android:id="@+id/messageToCypher"
        android:layout_width="356dp"
        android:layout_height="127dp"
        android:backgroundTint="#FF5722"
        android:ems="10"
        android:hint="@string/messageToCypherHint"
        android:inputType="textPersonName"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/CypherMainButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mainCypherInfo"
        android:layout_width="334dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:background="#8BC34A"
        android:text="@string/mainCypherInfo"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rotNumView"
        android:layout_width="72dp"
        android:layout_height="30dp"
        android:background="#8BC34A"
        android:text="@string/RotNumView"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/IncRotNumButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/RotNumInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.383" />

    <Button
        android:id="@+id/IncRotNumButton"
        android:layout_width="51dp"
        android:layout_height="41dp"
        android:layout_marginEnd="24dp"
        android:onClick="IncRotNum"
        android:text="@string/IncRotNumButton"
        app:layout_constraintBottom_toTopOf="@+id/DecRotNumButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageToCypher" />

    <Button
        android:id="@+id/DecRotNumButton"
        android:layout_width="51dp"
        android:layout_height="41dp"
        android:layout_marginEnd="24dp"
        android:onClick="DecRotNum"
        android:text="@string/DecRotNumButton"
        app:layout_constraintBottom_toTopOf="@+id/CypherMainButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IncRotNumButton" />

    <TextView
        android:id="@+id/RotNumInfo"
        android:layout_width="153dp"
        android:layout_height="30dp"
        android:background="#8BC34A"
        android:text="Rotation number"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rotNumView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.383" />

</androidx.constraintlayout.widget.ConstraintLayout>